--- a/b02/css/ProductManagement.css
+++ b/b02/css/ProductManagement.css
@@ -9,15 +9,37 @@
 /* Header */
 .head {
     width: 100%;
-    background: #e48705;
-    height: 70px;
+    height: 80px;
+    background-color: #f39200;   /* màu cam */
+    display: flex;
+    align-items: center;
+}
+.head img{
+    height: 80px;
+}
+.search {
+    width: 600px;
+    background-color: white;
+    padding: 10px 15px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
 }
 
-.head img {
-    height: 100%;
+.search .icon {
+    font-size: 18px;
+    opacity: 0.7;
 }
-.buttonlogo{
-    height: 100%;
+
+.search input {
+    width: 100%;
+    border: none;
+    outline: none;
+    background: transparent;
+    font-size: 16px;
+    padding-left: 10px;
+    color: #333;
 }
 
 /* Tổng container chia 2 cột */
@@ -69,6 +91,7 @@
     border-radius: 6px;
 }
 
+
 .navigation button:hover {
     background: #c0392b;
 }
@@ -102,6 +125,26 @@
 .body button:hover {
     background: #16a085;
 }
+
+.product-img {
+    width: 110px;
+    height:110px;
+    object-fit: cover;
+}
+
+.edit-button {
+    padding: 4px 12px;
+    background-color: #1abc9c;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.edit-button:hover {
+    opacity: 0.9;
+}
+
 .Displaypage{
     padding-top: 80px;
 }
@@ -131,4 +174,7 @@
 
 #stockquantity {
     width: 100px;
+}
+#edit{
+    width: 200px;
 }
